# factory

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  SECURITY.md  SETUP_CHECKLIST.md  SKILLS.md  legacy.md  log.txt  master_router.py  orchestrator.py  pyproject.toml  run_factory.py  setup_env.sh
benchmark_harness/: data.py  ema.py  eval.py  experiment_logging.py  infer.py  losses.py  manifests.py  metrics.py  models.py  optim.py  train.py  utils.py
context_harness/: 00_system_rules.md  01_market_insight.md  02_generated_prd.md  04_hardware_scaling_strategy.md  SESSION_RESUME.md  ablation_policy.md  arbitration_meeting.md  birdclef2026_execution_guide.md  birdclef2026_research_brief.md  birdclef_cli_handoff_spec.md  birdclef_cli_runbook.md  blackboard.md  claude-progress.md  current_bug_report.md  data_cleaning_policy.md  decisions_log.jsonl  execution_roadmap.md  external_data_policy.md  fork_policy.json  handoff_ledger.jsonl  harness_restoration_2026_04_06.md  install_checklist.md  iterative_pseudo_labeling_policy.md  kaggle_submission_loop.md  mcp_stack.md  operator_journal.md  postprocessing_policy.md  provider_allocation_rationale.md  self_hallucination_audit_2026_04_06.md  sprint_contract.json  state.json  target_decision.json  team_manifest.json
experiment_log/: analysis_birdclef_public_code_scan_001.json  analysis_birdclef_queue_001.json  architecture_proposal.json  critique_birdclef_queue_001.json  exp01_dataset_verification.json
harness/: __init__.py  check_operator_round.py  company.py  context_manager.py  eval_calibration.py  guardrails.py  (+3 more)
(+1112 files in other folders)
