[project]
name = "benchmark-harness"
version = "0.1.0"
description = "Minimal deep learning benchmark harness for CIFAR smoke validation"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "torchaudio>=2.2"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
